# codex-dac-rust

./: .gitignore  README-todo.md  README.md  index.html  package-lock.json  package.json  readme-architecture.md  vite.config.ts
.pf-agent-system-mapper/: README.md
.pf-agent-system-mapper/examples/fastapi/: bad-architecture-doc-example.md  good-architecture-doc-example.md
.pf-agent-system-mapper/examples/laravel/: bad-architecture-doc-example.md  good-architecture-doc-example.md
.pf-agent-system-mapper/examples/livewire/: bad-architecture-doc-example.md  good-architecture-doc-example.md
.pf-agent-system-mapper/examples/react/: bad-architecture-doc-example.md  good-architecture-doc-example.md
.pf-agent-system-mapper/examples/test-surface/: bad-test-surface-example.md  good-test-surface-example.md
.pf-agent-system-mapper/output/: 01-architecture-overview.md
.pf-agent-system-mapper/prompts/: 01-architecture-overview.md  01a-overlay-model-systems.md  02-code-flows.md  02a-recommend-code-flows.md  03-data-models.md  04-diagrams.md  05-test-surface.md
pf-docs/: 02-code-flow-deck-audio-playback.md  02-code-flow-local-folder-scan.md  02-code-flow-mix-assistant-scoring.md  02-code-flow-spotify-import.md  CODE-FLOW-RECOMMENDATIONS.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: commands.toml  default.toml
src-tauri/src/: lib.rs  main.rs
src/components/: AssistantPanel.tsx  DeckPanel.tsx  LibraryTable.tsx  Sidebar.tsx
src/hooks/: useDeck.ts
src/lib/: tauri.ts  types.ts
(+6 files in other folders)
