[package]
name = "pulsegrid_dj"
version = "0.1.0"
description = "PulseGrid DJ MVP built with Rust and Tauri"
authors = ["OpenAI Codex"]
license = "MIT"
edition = "2024"

[lib]
name = "pulsegrid_dj"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lofty = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
walkdir = "2"
